<resources>
    <string name="app_name">AirApi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="edit_name">Name</string>
    <string name="edit_surname">Surname</string>
    <string name="button_add_user">Add</string>
    <string name="edit_email">Email</string>
    <string name="edit_firstPassword">Password</string>
    <string name="edit_secondPassword">Repeat Password</string>
    <string name="edit_login_email">Login</string>
    <string name="edit_login_password">Password</string>
    <string name="button_login">LOG IN</string>
    <string name="button_logout">LOG OUT</string>
    <string name="log_out_to_register_new_account">Log out to register new account</string>
    <string name="you_are_already_logged_in">You are already logged in.</string>
    <string name="log_out">LOG OUT</string>
    <string name="bartek_poskart">Bartek Poskart</string>
    <string name="github_com_bartpos24">github.com/bartpos24</string>
    <string name="main_id">MAIN_ID</string>
    <string name="login_first">Login to your account first.</string>
    <string name="registered">Registered. Now You can login</string>
    <string name="password_wrong">Passwords doesn\'t match.</string>
    <string name="email_doesnt_exist">This email doesn\'t exists.</string>
    <string name="user_exists">This user already exists.</string>
    <string name="logged_out">Logged out.</string>
    <string name="logged_in">Logged in.</string>
    <string name="wrong_login_details">Wrong login details.</string>
    <string name="fill_areas">Fill all areas.</string>
</resources>
