<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_16dp"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_firstPassword"
        tools:text="@string/button_login" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_24dp"
        android:layout_marginLeft="@dimen/dim_24dp"
        android:layout_marginEnd="@dimen/dim_24dp"
        android:layout_marginRight="@dimen/dim_24dp"
        android:ems="10"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="98dp"
        tools:text="@string/edit_email" />

    <EditText
        android:id="@+id/edit_firstPassword"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_24dp"
        android:layout_marginLeft="@dimen/dim_24dp"
        android:layout_marginTop="@dimen/dim_16dp"
        android:layout_marginEnd="@dimen/dim_8dp"
        android:layout_marginRight="@dimen/dim_8dp"
        android:ems="10"
        android:hint="@string/edit_firstPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/edit_secondPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        tools:text="@string/edit_firstPassword" />

    <EditText
        android:id="@+id/edit_secondPassword"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_8dp"
        android:layout_marginLeft="@dimen/dim_8dp"
        android:layout_marginTop="@dimen/dim_16dp"
        android:layout_marginEnd="@dimen/dim_24dp"
        android:layout_marginRight="@dimen/dim_24dp"
        android:ems="10"
        android:hint="@string/edit_secondPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_firstPassword"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        tools:text="@string/edit_secondPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/already_logged_textview"
        android:textSize="@dimen/dim_20dp"
        android:text="@string/you_are_already_logged_in"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginTop="@dimen/dim_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/already_logged_textview"
        tools:text="@string/button_logout" />
</androidx.constraintlayout.widget.ConstraintLayout>